--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	 <title>Battery</title>
 	 <meta charset="UTF-8"/>
 	 <link rel="stylesheet" href="style.css" type="text/css"/>
- </head>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://raunak1089.github.io/all_scripts/serviceWorker.min.js"></script>
+    <script src="https://raunak1089.github.io/all_scripts/push.min.js"></script>
+
+	 </head>
 	 <body>
 	 <div id="batt"><div id="charged"></div><div id="time_left"></div></div>
   <div id="sliders">
