--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   </div>
   
 
+  <details>
+    <summary>Records:</summary>
+    <table></table>
+  </details>
+  
+
   <style id="present-fill">
   #batt::before {
     content: "";
@@ -33,6 +39,7 @@
     border-radius: 20px;
   }
 	 </style>
+
 <script src="script.js"></script>
 	 </body>
  </html>
