--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 	 <meta charset="UTF-8"/>
 	 <!-- <link rel="stylesheet" href="style.css" type="text/css"/> -->
  </head>
-	 <body>
+<style id="present-fill">
+  #batt::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+  }
+</style>
+
+ <body>
 
     <div id="timer"></div>
 
@@ -32,6 +44,8 @@
   </details>
   
 
+
+	
 
 <script src="script.js"></script>
 <script src="https://raunak1089.github.io/all_scripts/stat_script.js"></script>
